--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -12,20 +12,20 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <section class="card" id="html-section">
+      <section class="card" id=""html-section">
+      
+      </section>>
+
+      <section class="card" id="css-section">
 
       </section>
-   
-      <section class="card" id="css-section">
-   
-      </section>
-   
+
       <section class="card" id="git-section">
-   
+
       </section>
-   
+
       <section class="card" id="javascript-section">
-   
+        
       </section>
     </main>
 
