--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -14,7 +14,7 @@
     <main>
       <section class="card" id=""html-section">
       
-      </section>>
+      </section>
 
       <section class="card" id="css-section">
 
@@ -25,7 +25,7 @@
       </section>
 
       <section class="card" id="javascript-section">
-        
+
       </section>
     </main>
 
