added more code to Git file

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -40,6 +40,7 @@
           <li>Git clone is for linking github and the local machine.</li>
           <li>Git Status: checks which branch we are currently on.</li>
           <li>"git checkout -b (branch name)" is for making a new branch when working on the code.</li>
+          <li>git add -A is used to commit all files in the working bench.</li>
         </ul>
 
       </section>
