--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -28,7 +28,10 @@
         <h2>CSS</h2>
         <ul>
           
-          <li>Enter CSS notes here.</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+
         </ul>
 
       </section>
@@ -39,9 +42,13 @@
         <ul>
 
           <li>Git clone is for linking github and the local machine.</li>
+
           <li>Git Status: checks which branch we are currently on.</li>
-          <li>"git checkout -b (branch name)" is for making a new branch when working on the code.</li>
-          <li>git add -A is used to commit all files in the working bench.</li>
+
+          <li>Git checkout -b (branch name) is for making a new branch when working on the code.</li>
+
+          <li>Git add -A is used to commit all files in the working bench.</li>
+
         </ul>
 
       </section>
